/products api fixes
